--- a/css/style.css
+++ b/css/style.css
@@ -1,95 +1,42 @@
-body {
-    margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-}
+/* Global */
 
-ul{
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-}
+@import './global/global.css';
+@import './utilidades/tipografia.css';
+@import './utilidades/cores.css';
 
-a {
-    text-decoration: none;
-}
+/* Header && Footer*/
 
+@import './global/header.css';
+@import './global/footer.css';
 
-.header-bg {
-    background-color: #000000;
-}
+/* Home */
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.header-menu {
-    display: flex;
-    gap: 40px;
-}
-
-.header-menu a {
-    display: inline-block;
-    padding: 16px 0px;
-    color: #ffffff;
-    font-size: 18px;
-    position: relative;
-}
-
-.header-menu a:after {
-
-    content: "";
-    display: block;
-    height: 2px;
-    width: 0px;
-    background: #ffffff;
-    margin-top: 4px;
-    transition: 0.3s;
-    position: absolute;
-
-}
-
-.header-menu a:hover:after {
-    width: 100%;
-}
-
-@media (max-width: 800px) {
-    .header-menu {
-        gap: 20px;
-    }
-    .header-menu a {
-        background: #111111;
-        padding: 16px;
-        border-radius: 4px;
-    }
-
-    .header-menu a:hover {
-
-        background-color: #2e2e2e;
-    }
-
-    .header a:after{
-        display: none;
-    }
-}
-
-@media (max-width: 600px) {
-    .header-menu {
-        gap: 12px;
-    }
-
-    .header-menu a {
-        padding: 8px 12px;
-        font-size: 14px;
-    }
+@import './home/introducao.css';
+@import './bicicletas/bicicletas-listas.css';
+@import './home/tecnologia.css';
+@import './home/parceiros.css';
+@import './home/depoimento.css';
 
 
-}
+/* Contato */
+
+@import './contato/contato.css';
+@import './contato/lojas.css';
+
+/* Seguros */
+@import './seguros/seguros.css';
+@import './seguros/vantagens.css';
+@import './seguros/perguntas.css';
+
+/* Páginas Internas */
+
+@import './termos/termos.css';
+@import './bicicletas/bicicletas.css';
+@import './bicicleta/bicicleta.css';
+@import './bicicleta/seguro.css';
+@import './orcamento/orcamento.css';
+
+/* Utilidades */
+
+@import './utilidades/componentes.css';
+@import './utilidades/formulario.css';
